[tool.poetry]
name = "raspberry_heart"
version = "0.1.0"
description = ""
authors = ["Aleksandr"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
ffmpeg = "^1.4"
rich = "^12.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
